--- a/package.json
+++ b/package.json
@@ -1,1 +1,15 @@
 
+{
+  "name": "retell-webhook",
+  "version": "1.0.0",
+  "main": "index.js",
+  "type": "commonjs",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "express": "latest",
+    "body-parser": "latest",
+    "cors": "latest"
+  }
+}
