Refactor vercel.json to use functions configuration
Updated Vercel configuration to use functions instead of builds and routes.

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,8 @@
 {
   "version": 2,
-  "builds": [
-    { "src": "api/retell-webhook.js", "use": "@vercel/node" }
-  ],
-  "routes": [
-    { "src": "/api/retell-webhook", "dest": "/api/retell-webhook.js" }
-  ]
+  "functions": {
+    "api/retell-webhook.js": {
+      "runtime": "nodejs18.x"
+    }
+  }
 }
