--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "retell-webhook",
   "version": "1.0.0",
   "main": "api/retell-webhook.js",
+  "type": "module",
   "scripts": {
     "start": "node api/retell-webhook.js"
   }
