Update vercel.json to specify retell-webhook.js

--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,11 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/**/*.js",
+      "src": "api/retell-webhook.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
-    },
     {
       "src": "/(.*)",
       "dest": "/api/retell-webhook.js"
